# OPC-UA-Log-Fetcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
docker/: Dockerfile
src/opc_ua_module/: __init__.py  alarm_capture.py  alarm_handler.py  main.py
